shift calculator rewritten to be more simple. painter must be updated to use TimePair.splitAround in the same manner as MemberRow