@@ -1,54 +1,68 @@
-package org.rothe.john.working_hours.ui.canvas.shift2;
+package org.rothe.john.working_hours.ui.canvas.shifts.calculator;
 
 import lombok.val;
 import org.rothe.john.working_hours.model.Member;
 import org.rothe.john.working_hours.model.Time;
-import org.rothe.john.working_hours.ui.canvas.st.SpaceTime;
 import org.rothe.john.working_hours.ui.canvas.st.TimePair;
 import org.rothe.john.working_hours.util.SampleFactory;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Stream;
 
 public class ShiftCalculator {
     private final List<Member> members;
-    private final SpaceTime spaceTime;
 
-    private ShiftCalculator(Collection<Member> members, SpaceTime spaceTime) {
+    private ShiftCalculator(Collection<Member> members) {
         this.members = members.stream().toList();
-        this.spaceTime = spaceTime;
     }
 
-    public static ShiftCalculator of(Collection<Member> members, SpaceTime spaceTime) {
-        return new ShiftCalculator(members, spaceTime);
+    public static ShiftCalculator of(Collection<Member> members) {
+        return new ShiftCalculator(members);
     }
 
     public static void main(String[] args) {
-        ShiftCalculator calculator = new ShiftCalculator(SampleFactory.debugMembers(), null);
+        ShiftCalculator calculator = new ShiftCalculator(SampleFactory.debugMembers());
         System.err.println("<changes>");
-        for(ShiftChange c : calculator.shiftChanges()) {
+        for (ShiftChange c : calculator.shiftChanges()) {
             System.err.printf("    %s (%s) - %s%n", c.time(), c.time().zone(), c.members().stream().map(Member::name).toList());
         }
         System.err.println("</changes>");
+
+
+        System.err.println(Shift.toListString(calculator.findShifts()));
     }
 
-    public List<Shift2> shifts() {
+    public List<Shift> largestShift() {
+        return findShifts().stream()
+                .sorted(Comparator.comparing(Shift::size).reversed().thenComparing(Shift::duration))
+                .limit(1)
+                .toList();
+    }
+
+    private List<Shift> findShifts() {
         val changes = new ArrayList<>(shiftChanges());
-        if(changes.isEmpty()) {
+        if (changes.isEmpty()) {
             return List.of();
         }
-        changes.add(changes.getFirst());
 
-        // Pairing and/or gathering iterator?
-
-        val it = changes.listIterator(1);
-        while(it.hasNext()) {
-//            it.
+        List<Shift> list = new ArrayList<>();
+        val it = PairingIterator.of(changes);
+        while (it.hasNext()) {
+            val pair = it.next();
+            if (pair.left().members().isEmpty()) {
+                continue;
+            }
+            list.add(toShift(pair));
         }
-        return List.of();
+        return Collections.unmodifiableList(list);
+    }
+
+    private Shift toShift(PairingIterator.Pair<ShiftChange> pair) {
+        return new Shift(toTimePair(pair), Set.copyOf(pair.left().members()));
+    }
+
+    private TimePair toTimePair(PairingIterator.Pair<ShiftChange> pair) {
+        return new TimePair(pair.left().time(), pair.right().time());
     }
 
     public List<ShiftChange> shiftChanges() {
